--- a/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -70,7 +70,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
@@ -80,10 +80,13 @@
                 </p>
                 <ul>
                     <li>
-                        <a href=""><span class="fa-brands fa-instagram"><span><a>
+                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
                     </li>
                     <li>
-                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                    <li>
+                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
                     </li>
                 </ul>
             </div>
@@ -102,6 +105,9 @@
                     </li>
                     <li>
                         <a href="/FitlyApp/Artigos/">Artigos</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Referencias/">Referências</a>
                     </li>
                 </ul>
             </div>
