--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -180,65 +180,70 @@
                 </li>
             </ul>
         </section>
-        <footer>
-            <div>
-                <div class="logo">
-                    <a href="/FitlyApp/">
-                        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                        <h2>
-                            Fitly
-                        </h2>
-                    </a>
-                    <p>
-                        Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito
-                        mais!
-                    </p>
-                    <ul>
-                        <li>
-                            <a href=""><span class="fa-brands fa-instagram"><span><a>
-                        </li>
-                        <li>
-                            <a href=""><span class="fa-brands fa-tiktok"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="mapSite">
+    <footer>
+        <div>
+            <div class="logo">
+                <a href="/FitlyApp/">
+                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
-                        Indice
+                        Fitly
                     </h2>
-                    <ul>
-                        <li>
-                            <a href="/FitlyApp/">Início</a>
-                        </li>
-                        <li>
-                            <a href="/FitlyApp/Sobre-o-projeto/">
-                                Nosso projeto
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/FitlyApp/Artigos/">Artigos</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="contact">
-                    <h2> Contato</h2>
-                    <p>
-                        Tem alguma dúvida? Nos contate!
-                    </p>
-                    <p class="email">
-                        Fitlyapp1@gmail.com
-                    </p>
-                    <p>
-                        Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                    </p>
-                </div>
-            </div>
-            <div class="direitos">
+                </a>
                 <p>
-                    &copy; 2025 Fitly. Todos os direitos reservados.
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+                </p>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
+                    </li>
+                    <li>
+                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                    <li>
+                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
+                <h2>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="/FitlyApp/">Início</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Sobre-o-projeto/">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Artigos/">Artigos</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Referencias/">Referências</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate!
+                </p>
+                <p class="email">
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
                 </p>
             </div>
-        </footer>
+        </div>
+        <div class="direitos">
+        <p>
+            &copy; 2025 Fitly. Todos os direitos reservados.
+        </p>
+        </div>
+    </footer>
     </main>
 </body>
 
