--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css?v=1"/>
     <script>
       const images = [
         "Imagens/img pag inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -102,10 +102,13 @@
                 </p>
                 <ul>
                     <li>
-                        <a href=""><span class="fa-brands fa-instagram"><span><a>
+                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
                     </li>
                     <li>
-                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                    <li>
+                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
                     </li>
                 </ul>
             </div>
@@ -124,6 +127,9 @@
                     </li>
                     <li>
                         <a href="/FitlyApp/Artigos/">Artigos</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Referencias/">Referências</a>
                     </li>
                 </ul>
             </div>
