--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -27,14 +27,14 @@
                     <label for="idade">
                         <input class="texto" type="text" placeholder="Sua idade">
                     </label>
-                    <h2>Gênero</h2>
+                    <h2>Sexo</h2>
                     <label for="sexo">
                         <input type="checkbox">Masculino
                     </label>
                     <label for="sexo">
                         <input type="checkbox">Feminino
                     </label><br>
-                    <a href="#">próximo</a>
+                    <a href="index2.html">próximo</a>
                 </form>
             </legend>
         </section>
