--- a/TrabalhandoNisso.html
+++ b/TrabalhandoNisso.html
@@ -24,7 +24,7 @@
     <main>
         <section class="NotFound" id="NotFound">
         <h1>404</h1>
-        <h2>Estamos Trabalhando Para Finalizar Está Página o Mais Rápido Possível</h2>
+        <h2>Estamos trabalhando para finalizar esta página o mais rápido possível</h2>
         <button></button>
         <a href="/FitlyApp"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
         </section>
