--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
     <link rel="stylesheet" href="style.css?v=1"/>
+    <link rel="icon" href="/Imagens/logos/FitlyLogo.png">
     <script>
       const images = [
         "Imagens/img pag inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
