--- a/Formulario/preferencias.html
+++ b/Formulario/preferencias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario Fitly - Etapa 6</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="/Imagens\logos\FitlyLogo.png" />
   </head>
   <body>
     <main>
