--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>
               Controle calorias, treine e alcance seus objetivos.
             </p>
-            <a href="TrabalhandoNisso.html">Comece Agora</a>
+            <a href="/Formulario/">Comece Agora</a>
           </div>
         </div>
       </section>
@@ -84,7 +84,7 @@
         </section>
         <section class="CTA">
           <h2>Sua jornada para o topo começa <br> com o primeiro passo.</h2>
-          <a href="TrabalhandoNisso.html">Comece Agora</a>
+          <a href="/Formulario/">Comece Agora</a>
           <img src="Imagens/img pag inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg" alt="">
         </section>
     </main>
