--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -32,6 +32,7 @@
       </ul>
     </nav>
   </header>
+  
   <main>
     <section id="banner">
       <div class="IMG">
@@ -41,70 +42,73 @@
         </div>
       </div>
     </section>
+
     <section class="colaboradores">
       <h2>Colaboradores do projeto</h2>
-      <div class="colab">
-        <ul class="unit">
-          <li>
-            <strong>Bruna Ignácio Bernardes:</strong> Fonte da parte biológica; 
-            <p>
-              <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
-            </p>
+      <ul class="colab">
+        <li class="unit">
+          <strong>Bruna Ignácio Bernardes:</strong> Fonte da parte biológica;
+          <p>
+            <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
+          </p>
+        </li>
+        <ul class="dupla">
+          <div>
+            <li>
+              <strong>Igor Marcon Michels:</strong> Líder do projeto,
+              responsável pela entrega das partes de cada um e coordenador das
+              funções de cada um;
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/AIgor.jpg" alt="Igor Michels" />
+              </p>
             </li>
+            <li>
+              <strong>Pedro José Oliveira da Roza:</strong> Responsável pela
+              pesquisa e auxiliar no desenvolvimento das partes estáticas do
+              site.
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/APedro.jpg" alt="Pedro josé" />
+              </p>
+            </li>
+          </div>
+          <div>
+            <li>
+              <strong>Victor Feliciano:</strong> Responsável pela as funcionalidades do
+              site, como login e outros cálculos com dados informados pelo usuário;
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/AFeliciano.jpg" alt="Victor Murilo" />
+              </p>
+            </li>
+
+            <li>
+              <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
+              responsável pela descrição e desenvolvimento das atas de reunião;
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/AVictor Murilo.jpg" alt="Victor Murilo" />
+              </p>
+            </li>
+          </div>
+          <div>
+            <li>
+              <p>
+              <strong>Kaue Teixeira:</strong> Responsável por programar as
+              partes estáticas do site, além de auxiliar na pesquisa;
+              </p>
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/AKaue.jpg" alt="Kaue Teixeira" />
+              </p>
+            </li>
+            <li>
+              <p>
+              <strong>Matheus Lacerda Maximiano:</strong> Criador da
+              organização, responsável por parte da pesquisa;
+              </p>
+              <p>
+                <img class="imagem" src="../Imagens/Img integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
+              </p>
+            </li>
+          </div>
         </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Igor Marcon Michels:</strong> Líder do projeto,
-            responsável pela entrega das partes de cada um e coordenador das
-            funções de cada um;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/AIgor.jpg" alt="Igor Michels" />
-            </p>
-          </li>
-          <li>
-            <strong>Pedro José Oliveira da Roza:</strong> Responsável pela
-            pesquisa e auxiliar no desenvolvimento das partes estáticas do
-            site.
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/APedro.jpg" alt="Pedro josé" />
-            </p>
-          </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Victor Feliciano:</strong> Responsável pelo
-            desenvolvimento da base de dados e as funcionalidades do app e o
-            site, como login e senha, cálculos com os dados informados pelo
-            usuário;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/AFeliciano.jpg" alt="Victor Murilo" />
-            </p>
-          </li>
-          <li>
-            <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
-            responsável pela descrição e desenvolvimento das atas de reunião;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/AVictor Murilo.jpg" alt="Victor Murilo" />
-            </p>
-          </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Kaue Teixeira:</strong> Responsável por programar as
-            partes estáticas do site, além de auxiliar na pesquisa;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/AKaue.jpg" alt="Kaue Teixeira" />
-            </p>
-          </li>
-          <li>
-            <strong>Matheus Lacerda Maximiano:</strong> Criador da
-            organização, responsável por parte da pesquisa;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
-            </p>
-          </li>
-        </ul>
-      </div>
     </section>
     <section class="all-sec">
       <h2>Atas de reuniões:</h2>
@@ -112,12 +116,12 @@
         <ul>
 
           <li>
-              <div class="esquerda">
+            <div class="esquerda">
               <strong>11 de julho de 2025, 09:45 até às 11:15</strong>
               <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus
                 Maximiano, Victor Feliciano, Igor
                 Marcon Michels e Kaue Teixeira
-                </p>
+              </p>
               <p class="part">
                 <strong>Anotações:</strong>
               </p>
@@ -137,12 +141,12 @@
               </ol>
               </p>
             </div>
-            </li>
+          </li>
 
 
 
-            <li>
-          <div class="direita">
+          <li>
+            <div class="direita">
               <strong>18 de julho de 2025, 09:45 até às 11:15</strong>
               <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus
                 Maximiano, Victor Feliciano, Igor
@@ -176,13 +180,13 @@
                   </ul>
                 </ol>
                 </p>
-            </li>
+          </li>
           </div>
-            <li>
+          <li>
 
 
-              <li>
-          <div class="esquerda">
+          <li>
+            <div class="esquerda">
               <strong>8 de Agosto de 2025, 8:00 até às 9:30 | 8 de agosto de 2025 09:45 até às 11:15</strong>
               <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus
                 Maximiano, Victor Feliciano, Igor Marcon Michels e Kaue Teixeira</p>
@@ -190,9 +194,11 @@
                 <strong>Anotações:</strong>
               </p>
               <ul>
-                <li class="p">Como os computadores da sala B3 foram resetados, acabamos perdendo o email do app, incluindo a conta
+                <li class="p">Como os computadores da sala B3 foram resetados, acabamos perdendo o email do app,
+                  incluindo a conta
                   do instagram. Por isso, criamos um novo email e uma nova conta nas redes sociais.</li>
-                <li class="p">Definição das cores: Preto e branco (juntamente aos seus diferentes tons). Em páginas de fundo
+                <li class="p">Definição das cores: Preto e branco (juntamente aos seus diferentes tons). Em páginas de
+                  fundo
                   claro, letras pretas mais finas. Em páginas de fundo escuro, letras em branco mais grossas para dar um
                   destaque. Os títulos serão em azul.</li>
                 <li class="p">Criação da logo, utilizando como base as cores já definidas do site</li>
@@ -226,7 +232,7 @@
 
 
           <li>
-              <div class="direita">
+            <div class="direita">
               <strong>20 de Agosto de 2025, 13:00 até às 13:45</strong>
               <p class="part">Participantes: Igor Maicon Michels e Victor Murilo Bernardes
               </p>
@@ -253,24 +259,26 @@
                 <li><i class="fa-solid fa-square-check"></i> Início da página sobre o projeto</li>
                 <li><i class="fa-solid fa-square-check"></i> Finalização da página de um dos artigos</li>
                 <li><i class="fa-solid fa-square-check"></i> Início da página inicial do artigo</li>
-                <li><i class="fa-solid fa-square-check"></i> Criação do menu recolhivel para o header Adiada para a segunda parte do trabalho</li>
+                <li><i class="fa-solid fa-square-check"></i> Criação do menu recolhivel para o header Adiada para a
+                  segunda parte do trabalho</li>
               </ul>
             </div>
-            </li>
+          </li>
 
 
 
-            <li>
-              <div class="esquerda">
+          <li>
+            <div class="esquerda">
               <strong>29 de agosto de 2025, 9:45 até às 11:15</strong>
               <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus
                 Maximiniano Lacerda, Victor Feliciano e Pedro José
-                </p>
+              </p>
               <p class="part">
                 <strong>Anotações:</strong>
               </p>
               <ul>
-                <li class="p">Conversamos com o professor sobre a nova colaboradora: Bruna (Nutricionista, irmã do colega Victor)
+                <li class="p">Conversamos com o professor sobre a nova colaboradora: Bruna (Nutricionista, irmã do
+                  colega Victor)
                 </li>
               </ul>
               <p>
@@ -286,20 +294,21 @@
               </ul>
               </p>
             </div>
-            </li>
+          </li>
 
 
-            <li>
-              <div class="esquerda">
+          <li>
+            <div class="esquerda">
               <strong>29 de agosto de 2025, 9:45 até às 11:15</strong>
               <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus
                 Maximiniano Lacerda, Victor Feliciano e Pedro José
-                </p>
-                <p class="part">
+              </p>
+              <p class="part">
                 <strong>Anotações:</strong>
               </p>
               <ul>
-                <li class="p">Conversamos com o professor sobre a nova colaboradora: Bruna (Nutricionista, irmã do colega Victor)
+                <li class="p">Conversamos com o professor sobre a nova colaboradora: Bruna (Nutricionista, irmã do
+                  colega Victor)
                 </li>
               </ul>
               <p>
@@ -315,13 +324,14 @@
               </ul>
               </p>
             </div>
-            </li>
+          </li>
 
 
-            <li>
-              <div class="direita">
+          <li>
+            <div class="direita">
               <strong>5 de Setembro de 2025, 09:45 até 11:15</strong>
-              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus Maximiniano Lacerda, Victor Feliciano e Pedro José
+              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus
+                Maximiniano Lacerda, Victor Feliciano e Pedro José
               </p>
               <p class="part">
                 <strong>Anotações:</strong>
@@ -341,15 +351,16 @@
               </ul>
               </p>
             </div>
-            </li>
+          </li>
 
 
 
-            <li>
-              <div class="esquerda">
+          <li>
+            <div class="esquerda">
               <strong>12 de Setembro de 2025, 09:45 até 11:15</strong>
-              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus Maximiniano Lacerda, Victor Feliciano e Pedro José
-              :</p>
+              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus
+                Maximiniano Lacerda, Victor Feliciano e Pedro José
+                :</p>
               <p class="part">
                 <strong>Anotações:</strong>
               </p>
@@ -364,18 +375,20 @@
               <ul>
                 <li><i class="fa-solid fa-square-check"></i> Tirar foto da equipe separadamente</li>
                 <li><i class="fa-solid fa-square-check"></i> Conseguir uma foto da colaboradora</li>
-                <li><i class="fa-solid fa-square-check"></i> Anotar correções que podem ser feitas no design do site</li>
+                <li><i class="fa-solid fa-square-check"></i> Anotar correções que podem ser feitas no design do site
+                </li>
               </ul>
               </p>
             </div>
-            </li>
+          </li>
 
 
 
-            <li>
-              <div class="direita">
+          <li>
+            <div class="direita">
               <strong>13 de Setembro de 2025, 08:00 até 11:15</strong>
-              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus Maximiniano Lacerda e Pedro José
+              <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus
+                Maximiniano Lacerda e Pedro José
               </p>
               <p class="part">
                 <strong>Anotações:</strong>
@@ -390,7 +403,7 @@
             </div>
           </li>
         </ul>
-        </nav>
+      </nav>
     </section>
   </main>
   <footer>
