--- a/TrabalhandoNisso.html
+++ b/TrabalhandoNisso.html
@@ -9,18 +9,27 @@
 </head>
 <body>
     <header>
-      <div class="logo">
-        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div class="logo">
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+      <a href="/FitlyApp">
+        <h2>Fitly</h2>
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
     <main>
         <section class="NotFound" id="NotFound">
         <h1>404</h1>
