Repaginação do Repositório agora dividido em duas partes e ajustes na indexação

--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -47,9 +47,9 @@
       <h2>Colaboradores do projeto</h2>
       <ul class="colab">
         <li class="unit">
-          <strong>Bruna Ignácio Bernardes:</strong> Fonte da parte biológica;
+          <strong>Bruna Ignácio Bernardes: </strong> Formada em nutrição, trabalha atualmente com marketing, ajudou na criação de vários artigos para o projeto. 
           <p>
-            <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
+            <img src="/Imagens/Img_integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
           </p>
         </li>
         <ul class="dupla">
@@ -59,7 +59,7 @@
               responsável pela entrega das partes de cada um e coordenador das
               funções de cada um;
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/AIgor.jpg" alt="Igor Michels" />
+                <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels" />
               </p>
             </li>
             <li>
@@ -67,7 +67,7 @@
               pesquisa e auxiliar no desenvolvimento das partes estáticas do
               site.
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/APedro.jpg" alt="Pedro josé" />
+                <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé" />
               </p>
             </li>
           </div>
@@ -76,7 +76,7 @@
               <strong>Victor Feliciano:</strong> Responsável pela as funcionalidades do
               site, como login e outros cálculos com dados informados pelo usuário;
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/AFeliciano.jpg" alt="Victor Murilo" />
+                <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo" />
               </p>
             </li>
 
@@ -84,7 +84,7 @@
               <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
               responsável pela descrição e desenvolvimento das atas de reunião;
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/AVictor Murilo.jpg" alt="Victor Murilo" />
+                <img class="imagem" src="../Imagens/Img_integrantes/AVictor Murilo.jpg" alt="Victor Murilo" />
               </p>
             </li>
           </div>
@@ -95,7 +95,7 @@
               partes estáticas do site, além de auxiliar na pesquisa;
               </p>
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/AKaue.jpg" alt="Kaue Teixeira" />
+                <img class="imagem" src="../Imagens/Img_integrantes/AKaue.jpg" alt="Kaue Teixeira" />
               </p>
             </li>
             <li>
@@ -104,7 +104,7 @@
               organização, responsável por parte da pesquisa;
               </p>
               <p>
-                <img class="imagem" src="../Imagens/Img integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
+                <img class="imagem" src="../Imagens/Img_integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
               </p>
             </li>
           </div>
