--- a/FitlyApp/TrabalhandoNisso.html
+++ b/FitlyApp/TrabalhandoNisso.html
@@ -14,23 +14,34 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp">
+          <h2>Fitly</h2>
+        </a>
       </div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/">Início</a>
           </li>
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="NotFound" id="NotFound">
         <h1>404</h1>
-        <h2>Página Não Encontrada</h2>
+        <h2>
+          Estamos trabalhando para finalizar esta página o mais rápido possível
+        </h2>
         <button></button>
-        <a href="index.html">
+        <a href="/FitlyApp">
           <i class="fa-solid fa-house"></i> Volte A Página Inicial</a
         >
       </section>
