--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -150,7 +150,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="../Imagens/img Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
+                    <img src="/FitlyApp/Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
                 </div>
             </div>
             <p>
