Pagina Artigos Responsividade

--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -44,7 +44,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/AlimentacaoEquilibrada.html"
                 ><img
-                  src="img beneficios-maleficios/img alimentação-equilibreda/fresh-fruits-2305192_1280 1.png"
+                  src="/FitlyApp/Artigos/img_beneficios-maleficios/img alimentação-equilibreda/fresh-fruits-2305192_1280 1.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -62,7 +62,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html"
                 ><img
-                  src="img beneficios-alimentação-equilibrada/prato-02.png"
+                  src="/FitlyApp/Artigos/img_beneficios-alimentação-equilibrada/prato-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -81,7 +81,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/MicroHabitos.html"
                 ><img
-                  src="img artigoPrincipal/homen-02.png"
+                  src="/FitlyApp/Artigos/img_artigoPrincipal/homen-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -100,7 +100,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/OrganizaçãoAlimentar.html"
                 ><img
-                  src="img artigoPrincipal/ferks-02.png"
+                  src="/FitlyApp/Artigos/img_artigoPrincipal/ferks-02.png"
                   alt="img"
               /></a>
               <div class="texto">
